terraform/projects/infra-security-groups/collections.tf
#
# == Manifest: Project: Security Groups: collections
#
# The collections needs to be accessible on ports:
#   - 443 from the other VMs
#
# === Variables:
# stackname - string
#
# === Outputs:
# sg_collections_id
# sg_collections_elb_id

resource "aws_security_group" "collections" {
  name        = "${var.stackname}_collections_access"
  vpc_id      = "${data.terraform_remote_state.infra_vpc.vpc_id}"
  description = "Access to the collections host from its ELB"

  tags {
    Name = "${var.stackname}_collections_access"
  }
}

resource "aws_security_group_rule" "collections_ingress_collections-elb_http" {
  type      = "ingress"
  from_port = 80
  to_port   = 80
  protocol  = "tcp"

  # Which security group is the rule assigned to
  security_group_id = "${aws_security_group.collections.id}"

  # Which security group can use this rule
  source_security_group_id = "${aws_security_group.collections_elb.id}"
}

resource "aws_security_group" "collections_elb" {
  name        = "${var.stackname}_collections_elb_access"
  vpc_id      = "${data.terraform_remote_state.infra_vpc.vpc_id}"
  description = "Access the collections ELB"

  tags {
    Name = "${var.stackname}_collections_elb_access"
  }
}

# TODO: Audit
resource "aws_security_group_rule" "collections-elb_ingress_management_https" {
  type      = "ingress"
  from_port = 443
  to_port   = 443
  protocol  = "tcp"

  security_group_id        = "${aws_security_group.collections_elb.id}"
  source_security_group_id = "${aws_security_group.management.id}"
}

resource "aws_security_group_rule" "collectionss-elb_egress_any_any" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.collections_elb.id}"
}
